HighContrast: Fix actionbar borders
Make the selector more specific so that it doesn't affect contained
boxes. Copied from Adwaita.

https://bugzilla.gnome.org/show_bug.cgi?id=763775

--- a/gtk/theme/HighContrast/_common.scss
+++ b/gtk/theme/HighContrast/_common.scss
@@ -2470,7 +2470,7 @@ levelbar {
 }
 
 /**********
- * rames *
+ * frames *
  **********/
 frame border,
 .frame {
@@ -2480,7 +2480,7 @@ frame border,
   padding: 0;
 }
 
-actionbar box {
+actionbar > revealer > box {
   padding: 6px;
   border-width: 1px 0 0;
   border-color: $borders_color;
