--- a/gtk/theme/HighContrast/gtk-contained.css
+++ b/gtk/theme/HighContrast/gtk-contained.css
@@ -2542,7 +2542,7 @@ popover.background radiobutton:selected,
     color: #fff; }
 
 /**********
- * rames *
+ * frames *
  **********/
 frame border,
 .frame {
@@ -2555,7 +2555,7 @@ frame border,
   .frame:backdrop {
     border-color: #8d8d8d; }
 
-actionbar box {
+actionbar > revealer > box {
   padding: 6px;
   border-width: 1px 0 0;
   border-color: gray;
